--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@primevue/themes": "^4.0.0",
         "chart.js": "3.3.2",
+        "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "^4.0.0",
         "vue": "^3.4.34",
@@ -27,7 +28,7 @@
         "prettier": "^3.2.5",
         "sass": "^1.55.0",
         "tailwindcss": "^3.4.6",
-        "tailwindcss-primeui": "^0.3.2",
+        "tailwindcss-primeui": "^0.3.4",
         "unplugin-vue-components": "^0.27.3",
         "vite": "^5.3.1"
     }
